--- a/scss/sections/_subheader.scss
+++ b/scss/sections/_subheader.scss
@@ -16,7 +16,13 @@
     font-size: 40px;
   }
 }
-@media screen and (max-width: 410px) {
+@media screen and (max-width: 580px) {
+  //mobile mode
+  .subheader-menu h2 {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 480px) {
   //mobile mode
   .subheader-menu h2 {
     font-size: 35px;
@@ -39,13 +45,22 @@
     margin-top: 550px;
   }
 }
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 768px) {
+  //450
   //mobile mode
   .margin-top-mobile-home {
     margin-top: 550px;
   }
 }
+@media screen and (max-width: 768px) {
+  //450
+  //mobile mode
+  .margin-top-mobile-cafe {
+    margin-top: 610px;
+  }
+}
 @media screen and (max-width: 450px) {
+  //450
   //mobile mode
   .margin-top-mobile-cafe {
     margin-top: 700px;
