--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,27 @@
     scroll-behavior: smooth;
   }
 }
-
+#lightbox {
+  position: fixed;
+  z-index :1000;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+}
+#lightbox.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#lightbox img {
+  height: 500px;
+  width: auto;
+  padding: 4px;
+  background-color: #f8f8ce;
+  border: 2px solid #8c4a81;
+}
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
@@ -12147,6 +12167,7 @@ nav {
 }
 .center-align {
   text-align: center;
+  cursor: pointer;
 }
 
 .firstRow {
