--- a/scss/sections/_gallery.scss
+++ b/scss/sections/_gallery.scss
@@ -2,6 +2,7 @@
 
 .center-align {
   text-align: center;
+  cursor: pointer;
 }
 .firstRow {
   width: 500px;
@@ -42,4 +43,25 @@
   .aboutus-column {
     padding: 0px 150px;
   }
+}
+#lightbox {
+  position: fixed;
+  z-index :1000;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+}
+#lightbox.active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  padding: 4px;
+  background-color: #f8f8ce;
+  border: 2px solid #8c4a81;
 }
